tests/specs/run/node_addon_bindings_suggestion/main.out
error: Uncaught (in promise) Error: Could not locate the bindings file. Tried:
[WILDCARD]xmljs.node
throw new Error(
      ^
    at file:///[WILDCARD]/main.js:9:7

    info: Trying to execute an npm package using Node-API addons,
          these packages require local `node_modules` directory to be present.
    hint: Add `"nodeModulesDir": "auto" option to `deno.json`, and then run
          `deno install --allow-scripts=npm:<package> --entrypoint <script>` to setup `node_modules` directory.
